--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -1,210 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jackson Hole Chamber of Commerce | Discover</title>
-    <meta
-      name="description"
-      content="Discover page for the Jackson Hole Chamber of Commerce"
-    />
-    <meta name="author" content="Brenleigh Killpack" />
-    <meta
-      property="og:title"
-      content="Jackson Hole Chamber of Commerce | Discover"
-    />
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:image"
-      content="https://cdn4.picryl.com/photo/2016/01/01/one-of-four-large-arches-of-elk-antler-in-the-town-square-of-jackson-hole-wyoming-be953a-1024.jpg"
-    />
-    <meta
-      property="og:url"
-      content="https://bkill16.github.io/wdd230/chamber/index.html"
-    />
-    <link rel="stylesheet" href="./styles/normalize.css" />
-    <link rel="stylesheet" href="./styles/base.css" />
-    <link rel="stylesheet" href="./styles/larger.css" />
-    <link rel="icon" href="/chamber/favicon-chamber.ico" />
-  </head>
-  <body>
+
+    <meta name="description" content="Discover page for Jackson Hole Chamber of Commerce">
+    <meta name="author" content="Brenleigh Killpack">
+
+    <meta property="og:title" content="Jackson Hole Chamber of Commerce | Discover">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://cdn4.picryl.com/photo/2016/01/01/one-of-four-large-arches-of-elk-antler-in-the-town-square-of-jackson-hole-wyoming-be953a-1024.jpg">
+    <meta property="og:url" content="https://bkill16.github.io/wdd230/chamber/index.html">
+
+    <link rel="stylesheet" href="./styles/base.css">
+    <link rel="stylesheet" href="./styles/larger.css">
+    <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="icon" href="./favicon.ico">
+</head>
+<body>
     <header>
-      <picture>
-        <source
-          srcset="./images/logo-test.webp"
-          media="(max-width: 500px)"
-          width="200"
-        />
-        <img id="logo" src="./images/logo-test.webp" alt="Logo" width="375" />
-      </picture>
-      <nav>
-        <button id="menu"></button>
-        <ul class="navigation">
-          <li>
-            <a href="./index.html">Home</a>
-            <a href="./discover.html">Discover</a>
-            <a href="">Directory</a>
-            <a href="">Join</a>
-          </li>
-        </ul>
-      </nav>
+        <picture>
+            <source srcset="./images/logo-test.webp" media="(max-width: 500px)" width="200">
+            <img id="logo" src="./images/logo-test.webp" alt="Logo" width="375">
+        </picture>
+        <nav>
+            <button id="menu"></button>
+            <ul class="navigation">
+                <li>
+                    <a href="./index.html">Home</a>
+                    <a href="./discover.html">Discover</a>
+                    <a href="">Directory</a>
+                    <a href="">Join</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
-      <h1 class="discover-title">Discover Jackson Hole</h1>
-      <div class="discover-grid">
-        <div class="left">
-          <section class="visits">
-            <span id="visits"></span>
-          </section>
-          <section class="weather">
-            <h2>Snow Report</h2>
-            <h3>Grand Targhee Resort</h3>
-            <p>Overnight - 0"</p>
-            <p>24 HR - 12"</p>
-            <p>48 HR - 12"</p>
-            <p>Depth - 8"</p>
-            <p>Season - 12"</p>
-            <h3>Jackson Hole Mountain Resort</h3>
-            <p>Overnight - 0"</p>
-            <p>24 HR - 0"</p>
-            <p>48 HR - 0"</p>
-            <p>Depth - 0"</p>
-            <p>Season - 14"</p>
-            <h4>Last Updated: 10/24/2023</h4>
-            <div></div>
-          </section>
-          <section class="stats">
-            <h2>Popular Sights</h2>
-            <h3>Jackson Town Square</h3>
-            <h3>National Museum of Wildlife Art</h3>
-            <h3>Antler Archers of Jackson</h3>
-            <h3>Cunningham Cabin</h3>
-            <h3>National Elk Refuge</h3>
-            <h3>Yellowstone National Park</h3>
-            <h3>Jackson Hole Playhouse</h3>
-          </section>
-          <section class="attractions">
-            <h2>Attractions</h2>
-            <h3>Grand Teton National Park - Hikes</h3>
-            <ul>
-              <li>Taggart Lake - Open</li>
-              <li>Lake Creek Woodland Trail Loop - Closed</li>
-              <li>Phelps Lake Overlook - Closed</li>
-              <li>Lunch Tree Hill - Closed</li>
-              <li>Taggart Lake Bradley Lake Loop - Open</li>
-            </ul>
-            <h3>Grand Teton National Park - Campgrounds</h3>
-            <ul>
-              <li>Jenny Lake - Closed</li>
-              <li>Signal Mountain - Closed</li>
-              <li>Colter Bay - Closed</li>
-              <li>Lizard Creek - Closed</li>
-              <li>Headwaters - Closed</li>
-            </ul>
-            <h3>Jackson Hole Mountain Resort</h3>
-            <ul>
-              <li>Closed - Opening 11/24</li>
-            </ul>
-            <h3>Grand Targhee Resort</h3>
-            <ul>
-              <li>Closed - Opening 11/18</li>
-            </ul>
-          </section>
-          <section class="lodging">
-            <h2>Lodging</h2>
-            <h3>Quick Links</h3>
-            <ul>
-              <li><a target="_blank" href="https://lodgeatjh.com/hotel-rooms-in-jackson-wyoming?utm_source=triptease_attract&utm_medium=paid_search&utm_campaign=google_search&tt_api_key=8688d829c2da4b70b4326651fe5d6baf&tt_channel=paidsearch&gclid=CjwKCAjwysipBhBXEiwApJOcu8ozOk1vsO9GJtRNyMeH5Sprt16PkD0YlEYFIyZeCHY9870cCmVLDRoCdiIQAvD_BwE&tt_ps_tid=kwd-1929351059728&tt_ps_mt=e&tt_ps_cid=19194545212&tt_ps_agid=142985988886&tt_ps_d=c&tt_ps_c=673892531448&tt_ps_ap=">The Lodge at Jackson Hole</a></li>
-              <li><a target="_blank" href="https://www.hilton.com/en/hotels/jacjhhx-hampton-jackson-hole/">Hampton Inn Jackson Hole</a></li>
-              <li><a target="_blank" href="https://www.marriott.com/en-us/hotels/jacsh-springhill-suites-jackson-hole/overview/?scid=f2ae0541-1279-4f24-b197-a979c79310b0">Springhill Squites Jackson Hole</a></li>
-              <li><a target="_blank" href="https://www.hoteljackson.com/?utm_source=local-directories&utm_medium=organic&utm_campaign=travelclick-localconnect">Hotel Jackson</a></li>
-              <li><a target="_blank" href="https://www.tetonlodge.com/?utm_source=gmb-skiresort&utm_medium=organic&utm_campaign=gmb">Teton Mountain Lodge and Spa</a></li>
-            </ul>
-          </section>
-          <section class="eating">
-            <h2>Restaraunts</h2>
-            <div class="restaraunt">
-              <h3>The Blue Lion</h3>
-              <p>160 N Millward St</p>
-              <p>Jackson, WY 83001</p>
-              <p>(307)733-3912</p>
+        <h1>Discover Jackson Hole</h1>
+        <div class="discover-grid">
+            <div class="left">
+                <section class="visits">
+                    <span id="pageVisits"></span>
+                </section>
+                <section class="weather">
+                    <h2>Snow Report</h2>
+                    <h3>Grand Targhee Resort</h3>
+                    <p>Overnight - 0"</p>
+                    <p>24 HR - 12"</p>
+                    <p>48 HR - 12"</p>
+                    <p>Depth - 8"</p>
+                    <p>Season - 12"</p>
+                    <h3>Jackson Hole Mountain Resort</h3>
+                    <p>Overnight - 0"</p>
+                    <p>24 HR - 0"</p>
+                    <p>48 HR - 0"</p>
+                    <p>Depth - 0"</p>
+                    <p>Season - 14"</p>
+                    <h4>Last Updated: 10/24/2023</h4>
+                </section>
+                <section class="popular">
+                    <h2>Popular Sights</h2>
+                    <p>Jackson Town Square</p>
+                    <p>National Museum of Wildlife Art</p>
+                    <p>Antler Archers of Jackson</p>
+                    <p>Cunningham Cabin</p>
+                    <p>National Elk Refuge</p>
+                    <p>Yellowstone National Park</p>
+                    <p>Jackson Hole Playhouse</p>
+                </section>
+                <section class="attractions">
+                    <h2>Attractions</h2>
+                    <h3>Grand Teton National Park - Hikes</h3>
+                    <ul>
+                        <li>Taggart Lake - Open</li>
+                        <li>Lake Creek Woodland Trail Loop - Closed</li>
+                        <li>Phelps Lake Overlook - Closed</li>
+                        <li>Lunch Tree Hill - Closed</li>
+                        <li>Taggart Lake Bradley Lake Loop - Open</li>
+                    </ul>
+                    <h3>Grand Teton National Park - Campgrounds</h3>
+                    <ul>
+                        <li>Jenny Lake - Closed</li>
+                        <li>Signal Mountain - Closed</li>
+                        <li>Colter Bay - Closed</li>
+                        <li>Lizard Creek - Closed</li>
+                        <li>Headwaters - Closed</li>
+                    </ul>
+                    <h3>Jackson Hole Mountain Resort</h3>
+                    <ul>
+                        <li>Closed - Opening 11/24</li>
+                    </ul>
+                    <h3>Grand Targhee Resort</h3>
+                    <ul>
+                        <li>Closed - Opening 11/18</li>
+                    </ul>
+                </section>
+                <section class="lodging">
+                    <h2>Lodging</h2>
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a target="_blank" href="https://lodgeatjh.com/hotel-rooms-in-jackson-wyoming?utm_source=triptease_attract&utm_medium=paid_search&utm_campaign=google_search&tt_api_key=8688d829c2da4b70b4326651fe5d6baf&tt_channel=paidsearch&gclid=CjwKCAjwysipBhBXEiwApJOcu8ozOk1vsO9GJtRNyMeH5Sprt16PkD0YlEYFIyZeCHY9870cCmVLDRoCdiIQAvD_BwE&tt_ps_tid=kwd-1929351059728&tt_ps_mt=e&tt_ps_cid=19194545212&tt_ps_agid=142985988886&tt_ps_d=c&tt_ps_c=673892531448&tt_ps_ap=">The Lodge at Jackson Hole</a></li>
+                        <li><a target="_blank" href="https://www.hilton.com/en/hotels/jacjhhx-hampton-jackson-hole/">Hampton Inn Jackson Hole</a></li>
+                        <li><a target="_blank" href="https://www.marriott.com/en-us/hotels/jacsh-springhill-suites-jackson-hole/overview/?scid=f2ae0541-1279-4f24-b197-a979c79310b0">Springhill Squites Jackson Hole</a></li>
+                        <li><a target="_blank" href="https://www.hoteljackson.com/?utm_source=local-directories&utm_medium=organic&utm_campaign=travelclick-localconnect">Hotel Jackson</a></li>
+                        <li><a target="_blank" href="https://www.tetonlodge.com/?utm_source=gmb-skiresort&utm_medium=organic&utm_campaign=gmb">Teton Mountain Lodge and Spa</a></li>
+                    </ul>
+                </section>
+                <section class="eating">
+                    <h2>Restaraunts</h2>
+                    <div class="restaraunt">
+                        <h3>The Blue Lion</h3>
+                        <p>160 N Millward St</p>
+                        <p>Jackson, WY 83001</p>
+                        <p>(307)733-3912</p>
+                    </div>
+                    <div class="restaraunt">
+                        <h3>Gun Barrel Steak and Game House</h3>
+                        <p>862 W Broadway</p>
+                        <p>Jackson, WY 83001</p>
+                        <p>(307)733-3287</p>
+                    </div>
+                    <div class="restaraunt">
+                        <h3>Snake River Grill</h3>
+                        <p>84 E Broadway</p>
+                        <p>Jackson, WY 83001</p>
+                        <p>(307)733-0557</p>
+                    </div>
+                </section>
             </div>
-            <div class="restaraunt">
-              <h3>Gun Barrel Steak and Game House</h3>
-              <p>862 W Broadway</p>
-              <p>Jackson, WY 83001</p>
-              <p>(307)733-3287</p>
+            <div class="right">
+                <picture>
+                    <source srcset="./images/discover-img1small.webp" media="(max-width: 500px)" 
+                    width="400" height="200">
+                    <img src="./images/discover-img1.webp" alt="Mormon Row" width="600" height="400" 
+                    loading="lazy">
+                </picture>
+                <p>Mormon Row - Grand Teton National Park</p>
+                <picture>
+                    <source srcset="./images/discover-img2small.webp" media="(max-width: 500px)" width="400" 
+                    height="200">
+                    <img src="./images/discover-img2.webp" alt="Downtown Jackson" width="600" height="400" 
+                    loading="lazy">
+                </picture>
+                <p>Downtown Jackson, WY</p>
+                <picture>
+                    <source srcset="./images/discover-img3small.webp" media="(max-width: 500px)" width="400" 
+                    height="200">
+                    <img src="./images/discover-img3.webp" alt="Schwabacher Landing" width="600" height="400" 
+                    loading="lazy">
+                </picture>
+                <p>Schwabacher Landing - Grand Teton National Park</p>
+                <picture>
+                    <source srcset="./images/discover-img4small.webp" media="(max-width: 500px)" width="400" 
+                    height="200">
+                    <img src="./images/discover-img4.webp" alt="Skiing Corbet's Colouir" width="600" height="400" 
+                    loading="lazy">
+                </picture>
+                <p>Corbet's Colouir - Jackson Hole Mountain Resort</p>
+                <picture>
+                    <source srcset="./images/discover-img5small.webp" media="(max-width: 500px)" width="400" 
+                    height="200">
+                    <img src="./images/discover-img5.webp" alt="Delta Lake" width="600" height="400" 
+                    loading="lazy">
+                </picture>
+                <p>Delta Lake - Grand Teton National Park</p>
+                <picture>
+                    <source srcset="./images/discover-img6small.webp" media="(max-width: 500px)" width="400" 
+                    height="200">
+                    <img src="./images/discover-img6.webp" alt="Teton Village" width="600" height="400" 
+                    loading="lazy">
+                </picture>
+                <p id="bottom-caption">Teton Village - Jackson Hole Mountain Resort</p>
             </div>
-            <div class="restaraunt">
-              <h3>Snake River Grill</h3>
-              <p>84 E Broadway</p>
-              <p>Jackson, WY 83001</p>
-              <p>(307)733-0557</p>
-            </div>
-          </section>
         </div>
-        <div class="right">
-          <div>
-            <picture>
-              <source srcset="./images/discover-img1small.webp" media="(max-width: 500px)" width="400" height="200">
-              <img src="./images/discover-img1.webp" alt="Mormon Row" width="600" height="400" loading="lazy">
-            </picture>
-            <p>Mormon Row - Grand Teton National Park</p>
-          </div>
-          <div>
-            <picture>
-              <source srcset="./images/discover-img2small.webp" media="(max-width: 500px)" width="400" height="200">
-              <img src="./images/discover-img2.webp" alt="Downtown Jackson" width="600" height="400" loading="lazy">
-            </picture>
-            <p>Downtown Jackson, WY</p>
-          </div>
-          <div>
-            <picture>
-              <source srcset="./images/discover-img3small.webp" media="(max-width: 500px)" width="400" height="200">
-              <img src="./images/discover-img3.webp" alt="Schwabacher Landing" width="600" height="400" loading="lazy">
-            </picture>
-              <p>Schwabacher Landing - Grand Teton National Park</p>
-          </div>
-          <div>
-            <picture>
-              <source srcset="./images/discover-img4small.webp" media="(max-width: 500px)" width="400" height="200">
-              <img src="./images/discover-img4.webp" alt="Skiing Corbet's Colouir" width="600" height="400" loading="lazy">
-            </picture>
-            <p>Corbet's Colouir - Jackson Hole Mountain Resort</p>
-          </div>
-          <div>
-            <picture>
-              <source srcset="./images/discover-img5small.webp" media="(max-width: 500px)" width="400" height="200">
-              <img src="./images/discover-img5.webp" alt="Delta Lake" width="600" height="400" loading="lazy">
-            </picture>
-            <p>Delta Lake - Grand Teton National Park</p>
-          </div>
-          <div>
-            <picture>
-              <source srcset="./images/discover-img6small.webp" media="(max-width: 500px)" width="400" height="200">
-              <img src="./images/discover-img6.webp" alt="Teton Village" width="600" height="400" loading="lazy">
-            </picture>
-            <p id="bottom-caption">Teton Village - Jackson Hole Mountain Resort</p>
-          </div>
-        </div>
-      </div>
     </main>
-      <footer>
+    <footer>
         <div id="footerContact">
-          <p>Jackson Hole Chamber of Commerce</p>
-          <p>123 Moose Road Way</p>
-          <p>Jackson, WY 83002</p>
-          <p>Phone: (123)456-7890</p>
+            <p>Jackson Hole Chamber of Commerce</p>
+            <p>123 Moose Road Way</p>
+            <p>Jackson, WY 83001</p>
+            <p>Phone: (123)456-7890</p>
         </div>
         <div class="footerCopy">
-          <p>&copy; <span id="date"></span> | Brenleigh Killpack | WDD 230</p>
+            <p>&copy; <span id="date"></span> | Brenleigh Killpack | WDD 230</p>
         </div>
         <div class="footerCopy">
-          <p>Last Modified: <span id="last-modified"></span></p>
+            <p>Last Modified: <span id="last-modified"></span></p>
         </div>
-      </footer>
+    </footer>
     <script src="./scripts/hamMenu.js"></script>
     <script src="./scripts/getDate.js"></script>
     <script src="./scripts/pageVisits.js"></script>
-  </body>
+</body>
 </html>
