--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -63,7 +63,7 @@
                     <h2>Popular Sights</h2>
                     <p>Jackson Town Square</p>
                     <p>National Museum of Wildlife Art</p>
-                    <p>Antler Archers of Jackson</p>
+                    <p>Antler Arches of Jackson</p>
                     <p>Cunningham Cabin</p>
                     <p>National Elk Refuge</p>
                     <p>Yellowstone National Park</p>
