--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
                         Lesson 04: <a href="https://codepen.io/bkill16/pen/vYbOYxv?editors=1100">CSS 
                             Pseudo Classes</a><span> | </span>
                         <a href="./week04/images/week04-combinators.png">CSS Combinators</a><span> | </span>
-                        <a href="./week04/table-build.html">HTML Tables</a>
+                        <a href="./week04/table-build.html">HTML Tables</a><span> | </span>
+                        <a href="./form-start/index.html">HTML Forms</a>
                     </li>
                 </ul>
             </section>
