--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -41,7 +41,7 @@
         <div class="discover-grid">
             <div class="left">
                 <section class="visits">
-                    <h2 id="pageVisits"></h2>
+                    <p id="pageVisits"></p>
                 </section>
                 <section class="weather">
                     <h2>Snow Report</h2>
