--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -40,9 +40,9 @@
         <h1>Discover Jackson Hole</h1>
         <div class="discover-grid">
             <div class="left">
-                <section class="visits">
+                <div class="visits">
                     <p id="pageVisits"></p>
-                </section>
+                </div>
                 <section class="weather">
                     <h2>Snow Report</h2>
                     <h3>Grand Targhee Resort</h3>
