--- a/form.html
+++ b/form.html
@@ -38,7 +38,7 @@
             <li><a href="">Form</a></li>
         </ul>
     </nav>
-    <body class="darkMode">
+    <main>
         <form method="get" action="record.html">
             <fieldset>
                 <label id="uname">Username* <input type="text" name="uname" required></label>
@@ -66,7 +66,7 @@
             </fieldset>
             <input type="submit" value="Submit" class="submitBtn">
         </form>
-    </body>
+    </main>
     <footer>
         <div id="footerCopyRight">
             <p>&copy; <span id="date"></span> | Brenleigh Killpack | United States</p>
