--- a/form.html
+++ b/form.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brenleigh Killpack - WDD 230 - Web Frontend Development</title>
+    <title>Brenleigh Killpack - WDD 230 - Form</title>
 
-    <meta name="description" content="WDD 230 Course Portal">
+    <meta name="description" content="WDD 230 Home Page Form">
     <meta name="author" content="Brenleigh Killpack">
 
-    <meta property="og:title" content="Brenleigh Killpack - WDD 230 Web Frontend Development">
+    <meta property="og:title" content="Brenleigh Killpack - Form">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://images.squarespace-cdn.com/content/v1/591f55e39f74565ba4db26d8/1496178430380-4JV9F16G3MKV4RSTZMVH/Spud+Day--Parade0068.jpeg">
     <meta property="og:url" content="https://bkill16.github.io/wdd230/">
