--- a/chamber/index.html
+++ b/chamber/index.html
@@ -83,7 +83,7 @@
             </section>
             <section id="event3" class="home-card">
                 <picture>
-                    <source srcset="./images/events3-img.webp" media="(max-width: 500px)" width="250"
+                    <source srcset="./images/event3-img.webp" media="(max-width: 500px)" width="250"
                     height="250">
                     <img class="events-img" src="./images/event3-img.webp" alt="Christmas Antlers"
                     width="300" height="300" loading="lazy">
