--- a/form.html
+++ b/form.html
@@ -47,7 +47,7 @@
                 <label for="pswd">Password*</label>
                 <input type="password" id="pswd" name="password" pattern="[a-zA-Z0-9]{8}" 
                     placeholder="Letters/numbers, 8 char" required>
-                <label for="pswd-check">Confirm Password*</label>
+                <label for="password">Confirm Password*</label>
                 <input type="password" id="pass-check" name="pswd-check" required>
                 <label for="email">Email*</label>
                 <input type="email" id="email" name="email" placeholder="abc23123@byui.edu"
