--- a/form.html
+++ b/form.html
@@ -41,18 +41,18 @@
     <main>
         <form method="get" action="record.html">
             <fieldset>
-                <label for="uname">Username*</label> 
+                <label>Username*</label> 
                 <input type="text" id="uname" name="uname" required>
                 <div class="pswd-msg"></div>
-                <label for="pswd">Password*</label>
+                <label>Password*</label>
                 <input type="password" id="pswd" name="password" pattern="[a-zA-Z0-9]{8}" 
                     placeholder="Letters/numbers, 8 char" required>
-                <label for="password">Confirm Password*</label>
+                <label>Confirm Password*</label>
                 <input type="password" id="pass-check" name="pswd-check" required>
-                <label for="email">Email*</label>
+                <label>Email*</label>
                 <input type="email" id="email" name="email" placeholder="abc23123@byui.edu"
                     pattern="[a-zA-Z0-9._%+-]+@byui\.edu$" required>
-                <label for="r">Page Rating:</label>
+                <label>Page Rating:</label>
                 <div id="rangevalue">1</div>
                 <input type="range" id="r" name="r" min="1" max="10" value="1" step="1">
                     <datalist id="rangevalues">
