--- a/chamber/index.html
+++ b/chamber/index.html
@@ -31,7 +31,7 @@
                     <a href="./index.html">Home</a>
                     <a href="./discover.html">Discover</a>
                     <a href="">Directory</a>
-                    <a href="">Join</a>
+                    <a href="./join.html">Join</a>
                 </li>
             </ul>
         </nav>
@@ -53,7 +53,7 @@
                 invaluable networking opportunities, resources, and support to help your business 
                 thrive.
             </p>
-            <button>Join Now!</button>
+            <a class="joinBtn" href="./join.html">Join Now!</a>
         </div>
         <div id="events-container">
             <h1>Upcoming Events</h1>
