--- a/chamber/join.html
+++ b/chamber/join.html
@@ -82,7 +82,7 @@
             </div>
             <div class="right">
                 <h1>Apply Now!</h1>
-                <form get="method" action="./thankyou.html">
+                <form method="get" action="./thankyou.html">
                     <fieldset>
                         <legend>Applicant Information</legend>
                         <label class="above">First Name* <input type="text" required name="fname"
