--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                     <li>
                         Lesson 05: <a href="https://codepen.io/bkill16/pen/GRzrOdo">CSS Pseudo Elements</a>
                         <span> | </span>
-                        <a href="/learn05/new-ward-members.json">JSON</a><span> | </span>
-                        <a href="/learn05/prophets.html">The Fetch API</a><span> | </span>
+                        <a href="./learn05/new-ward-members.json">JSON</a><span> | </span>
+                        <a href="./learn05/prophets.html">The Fetch API</a><span> | </span>
                     </li>
                 </ul>
             </section>
