--- a/learn05/prophets.html
+++ b/learn05/prophets.html
@@ -6,7 +6,7 @@
     <title>Prophets</title>
     <meta name="description" content="fetch practice">
     <meta name="author" content="Brenleigh Killpack">
-    <link rel="stylesheet" href="/learn05/styles/prophets.css">
+    <link rel="stylesheet" href="./styles/prophets.css">
 </head>
 <body>
     <header>
@@ -18,6 +18,6 @@
       <footer>
         Brenleigh Killpack | Latter-day Prophets
       </footer>
-      <script src="/learn05/scripts/prophets.js"></script>
+      <script src="./scripts/prophets.js"></script>
 </body>
 </html>
