--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jackson Hole Chamber of Commerce | Home</title>
+    <title>Confirm Form Submission</title>
 
-    <meta name="description" content="Home page for Jackson Hole Chamber of Commerce">
+    <meta name="description" content="Thank you page after submitting form">
     <meta name="author" content="Brenleigh Killpack">
 
-    <meta property="og:title" content="Jackson Hole Chamber of Commerce | Home">
+    <meta property="og:title" content="Confirm Form Submission">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://cdn4.picryl.com/photo/2016/01/01/one-of-four-large-arches-of-elk-antler-in-the-town-square-of-jackson-hole-wyoming-be953a-1024.jpg">
     <meta property="og:url" content="https://bkill16.github.io/wdd230/chamber/index.html">
