--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                         <span> | </span>
                         <a href="./learn05/new-ward-members.json">JSON</a><span> | </span>
                         <a href="./learn05/prophets.html">The Fetch API</a><span> | </span>
+                        <a href="./learn05/weather.html">APIs</a>
                     </li>
                 </ul>
             </section>
