--- a/index.html
+++ b/index.html
@@ -54,38 +54,7 @@
         <div class="container">
             <section class="card">
                 <h3>Learning Activities</h3>
-                <ul>
-                    <li>
-                        Lesson 01: <a href="./week01/holygrail.html">Layout</a><span> | </span>
-                        <a href="./week01/media-query.html">Media Queries</a><span> | </span>
-                        <a href="https://codepen.io/bkill16/pen/YzdxzmQ">Applied JavaScript</a>
-                    </li>
-                    <li>
-                        Lesson 02: <a href="./week02/design.html">Design Principles</a><span> | </span>
-                        <a href="./week02/bom.html">DOM Manipulation</a><span> | </span>
-                        <a href="https://codepen.io/bkill16/pen/vYvrxXz">Responsive Navigation</a>
-                    </li>
-                    <li>
-                        Lesson 03: <a href="./week03/images/landscape2.webp">WebP</a><span> | </span>
-                        <a href="./week03/lazy-loading.html">Lazy Loading</a><span> | </span>
-                        <a href="./week03/responsive-images.html">Responsive Images</a><span> | </span>
-                        <a href="./week03/local-storage.html">Local Storage</a>
-                    </li>
-                    <li>
-                        Lesson 04: <a href="https://codepen.io/bkill16/pen/vYbOYxv?editors=1100">CSS 
-                            Pseudo Classes</a><span> | </span>
-                        <a href="./week04/images/week04-combinators.png">CSS Combinators</a><span> | </span>
-                        <a href="./week04/table-build.html">HTML Tables</a><span> | </span>
-                        <a href="./form-start/index.html">HTML Forms</a>
-                    </li>
-                    <li>
-                        Lesson 05: <a href="https://codepen.io/bkill16/pen/GRzrOdo">CSS Pseudo Elements</a>
-                        <span> | </span>
-                        <a href="./learn05/new-ward-members.json">JSON</a><span> | </span>
-                        <a href="./learn05/prophets.html">The Fetch API</a><span> | </span>
-                        <a href="./learn05/weather.html">APIs</a>
-                    </li>
-                </ul>
+                <span id="learningActivites"></span>
             </section>
             <section id="weather-card" class="card">
                 <h3>Information</h3>
@@ -118,5 +87,6 @@
     <script src="./home-page/scripts/hamMenu.js"></script>
     <script src="./home-page/scripts/pageVisits.js"></script>
     <script src="./home-page/scripts/weather.js"></script>
+    <script src="./scripts/links.js"></script>
 </body>
 </html>
