--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <picture>
                 <source srcset="./home-page/images/hero-small.webp" media="(max-width: 400px)">
                 <source srcset="./home-page/images/hero-medium.webp" media="(max-width: 1000px)">
-                <img class="hero-img" src="./home-page/images/hero-img.webp" alt="Idaho Falls Temple"
-                width="100%" height="auto" loading="lazy">
+                <img class="hero-img" src="./home-page/images/hero-img.webp" alt="Idaho Falls Temple" 
+                loading="lazy">
             </picture>
             <div id="hero-label">
                 <p>Idaho Falls Temple</p>
@@ -54,7 +54,6 @@
         <div class="container">
             <section class="card">
                 <h3>Learning Activities</h3>
-                
             </section>
             <section id="weather-card" class="card">
                 <h3>Information</h3>
