--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -30,7 +30,7 @@
                 <li>
                     <a href="./index.html">Home</a>
                     <a href="./discover.html">Discover</a>
-                    <a href="">Directory</a>
+                    <a href="./directory.html">Directory</a>
                     <a href="./join.html">Join</a>
                 </li>
             </ul>
