--- a/chamber/join.html
+++ b/chamber/join.html
@@ -30,7 +30,7 @@
                 <li>
                     <a href="./index.html">Home</a>
                     <a href="./discover.html">Discover</a>
-                    <a href="">Directory</a>
+                    <a href="./directory.html">Directory</a>
                     <a href="./join.html">Join</a>
                 </li>
             </ul>
@@ -45,7 +45,7 @@
                     <ul>
                         <li class="fee">No membership fee required</li>
                         <li>Access to events and workshops</li>
-                        <li>Added to the Chamber's non-profit directory</li>
+                        <li>Added to the Chamber's directory</li>
                         <li>Opportunities to work with other non-profits</li>
                     </ul>
                 </section>
