--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jackson Hole Chamber of Commerce | Home</title>
+    <title>Jackson Hole Chamber of Commerce | Directory</title>
 
-    <meta name="description" content="Home page for Jackson Hole Chamber of Commerce">
+    <meta name="description" content="Directory page for Jackson Hole Chamber of Commerce">
     <meta name="author" content="Brenleigh Killpack">
 
     <meta property="og:title" content="Jackson Hole Chamber of Commerce | Home">
