--- a/chamber/join.html
+++ b/chamber/join.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Jackson Hole Chamber of Commerce | Join">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://cdn4.picryl.com/photo/2016/01/01/one-of-four-large-arches-of-elk-antler-in-the-town-square-of-jackson-hole-wyoming-be953a-1024.jpg">
-    <meta property="og:url" content="https://bkill16.github.io/wdd230/chamber/index.html">
+    <meta property="og:url" content="https://bkill16.github.io/wdd230/chamber/join.html">
 
     <link rel="stylesheet" href="./styles/base.css">
     <link rel="stylesheet" href="./styles/larger.css">
