--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -37,7 +37,12 @@
         </nav>
     </header>
     <main>
-        
+        <h1 id="directory-title">Business Directory</h1>
+        <div class="directory-menu">
+            <button id="grid-btn">⏹️ Grid</button>
+            <button id="list-btn">📄 List</button>
+        </div>
+        <div class="directory-grid busCards"></div>
     </main>
     <footer>
         <div id="footerContact">
@@ -56,5 +61,6 @@
     <script src="./scripts/hamMenu.js"></script>
     <script src="./scripts/getDate.js"></script>
     <script src="./scripts/members.js"></script>
+    <script src="./scripts/toggleButton.js"></script>
 </body>
 </html>
